--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Testing Page
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
- site description.
+# email: your-email@example.com
+#description: >- # this means to ignore newlines until "baseurl:"
+# site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 theme: minima
